--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@types/ol": "^6.2.0",
+    "hammerjs": "^2.0.8",
+    "ol": "^6.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
