--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@types/ol": "^6.2.0",
+    "codice-fiscale-js": "^2.2.4",
     "hammerjs": "^2.0.8",
     "ol": "^6.2.0",
     "rxjs": "~6.5.4",
