--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/ol": "^6.2.0",
     "codice-fiscale-js": "^2.2.4",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
+    "ngx-cookie-service": "^3.0.4",
     "ol": "^6.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
