--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chiavari",
-  "version": "0.0.0",
+  "name": "chiavari-frontend",
+  "version": "1.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
